# OpenGL

./: CMakeLists.txt
res/shaders/: Basic.shader
src/: indexBuffer.cpp  indexBuffer.hpp  main.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertexArray.cpp  vertexArray.hpp  vertexBuffer.cpp  vertexBuffer.hpp  vertexBufferLayout.hpp
src/res/shaders/: Basic.shader
